# potrin

./: .gitignore  .prettierrc.json  README.md  components.json  eslint.config.js  package.json  panda.config.ts  pnpm-lock.yaml  postcss.config.js  svelte.config.js  tailwind.config.ts  tsconfig.json  vite.config.js  vitest.setup.ts
.github/workflows/: pr-auto-approve.yaml
db/: drizzle.config.ts  electrify.sql  rebuild-schema.sh  schema.ts  test-setup.sh
db/migrations/: 001-schema.sql
docker/: compose.dev.yml  compose.test.yml
src/: app.css
src-tauri/: .taurignore  Cargo.toml  Makefile.toml  Tauri.toml  bacon.toml  build.rs  generate-db.sh  rust-toolchain.toml  tauri.conf.json
src-tauri/capabilities/: main.json  main.toml
src-tauri/db/migrations/: 0001_initial_schema.sql  0001_initial_setup.sql  20240820092216_test.sql  20240828100011_enable_foreign_keys.sql  20240828100046_oplog.sql  20240828100048_users.sql  20240828110013_pots.sql  20240828110014_sync_status.sql  20240828110309_outlines.sql  20240828110310_versions.sql  20240828110400_cards.sql  20240829015014_outline_y_updates.sql  20240829061405_cards.sql  20240829062120_card_y_updates.sql  20240829090152_card_checkpoints.sql  20241001083313_relations.sql  20241008060208_kv.sql  20241008094216_workspace.sql
src-tauri/macros/: Cargo.toml
src-tauri/macros/src/: anyhow_to_string.rs  eyre_to_any.rs  fields.rs  into_bson.rs  keys.rs  lib.rs  log_err.rs  model_to_event.rs  table_change_event.rs
src-tauri/migrations/: 20240820092216_test.sql
src-tauri/src/: commands.rs  database.rs  events.rs  lib.rs  main.rs  reconciler.rs  search_engine.rs  sqlite_interface.rs  state.rs  tantivy_interface.rs  test.rs  types.rs  utils.rs  window.rs
src-tauri/src/commands/: app_version.rs  create_pot.rs  create_quote.rs  create_user.rs  create_version.rs  delete_card_logically.rs  delete_card_physically.rs  delete_outline_logically.rs  delete_outline_physically.rs  delete_pot.rs  fetch_breadcrumbs.rs  fetch_card_y_updates.rs  fetch_conflicting_outline_ids.rs  fetch_outline_with_path_by_id.rs  fetch_outline_y_updates.rs  fetch_paragraph_position_index.rs  fetch_path.rs  fetch_pots.rs  fetch_relation.rs  fetch_relation_count.rs  fetch_timeline.rs  fetch_tree.rs  fetch_y_updates_by_doc_id.rs  get_app_state.rs  get_workspace_state.rs  hard_delete_y_doc.rs  index.rs  insert_card.rs  insert_outline.rs  insert_pending_y_update.rs  insert_pot.rs  insert_tree_version.rs  insert_user.rs  open_pot.rs  open_pot_selector.rs  search.rs  soft_delete_card.rs  soft_delete_outline.rs  soft_delete_paragraph.rs  update_app_state.rs  (+8 more)
src-tauri/src/database/: mod.rs  query.rs  table.rs  types.rs
src-tauri/src/database/query/: create_card.rs  create_outline.rs  delete.rs  delete_card_logically.rs  delete_card_physically.rs  delete_outline_logically.rs  delete_outline_physically.rs  delete_quote.rs  fetch.rs  fetch_breadcrumbs.rs  fetch_card_ids_by_outline_id.rs  fetch_card_y_updates_by_card_id.rs  fetch_cards.rs  fetch_cards_by_id.rs  fetch_cards_by_outline_id.rs  fetch_cards_by_time.rs  fetch_conflicting_outline_ids.rs  fetch_descendant_ids.rs  fetch_links.rs  fetch_outline_and_children.rs  fetch_outline_ids_in_tree.rs  fetch_outline_y_updates_by_outline_id.rs  fetch_outlines_by_id.rs  fetch_relation.rs  fetch_relation_count.rs  fetch_timeline.rs  fetch_tree.rs  fetch_unversioned_y_updates.rs  insert.rs  insert_card.rs  insert_outline.rs  insert_pot.rs  insert_user.rs  insert_version.rs  insert_y_updates.rs  mod.rs  select_card.rs  select_oplog.rs  select_outline.rs  update.rs  (+7 more)
src-tauri/src/search_engine/: cjk_bigram_tokenizer.rs  mod.rs
src-tauri/src/sqlite_interface/: mod.rs  query.rs  sync.rs  table.rs
src-tauri/src/sqlite_interface/query/: insert_card.rs  insert_outline.rs  select_card.rs  select_oplog.rs  select_outline.rs
src-tauri/src/sqlite_interface/table/: types.rs
src-tauri/src/state/: mod.rs  types.rs
src-tauri/src/tantivy_interface/: cjk_bigram_tokenizer.rs
src-tauri/src/types/: error.rs  model.rs  setting.rs  state.rs  util.rs
src/lib/: commands.ts  utils.test.ts  utils.ts
src/routes/: +layout.svelte  +layout.ts  (+1 more)
(+141 files in other folders)
