[package]
name = "potrin"
version = "0.0.0"
description = "A Tauri App"
authors = ["Joichiro Hayashi"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "potrin_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "=2.0.0-rc.9", features = ["config-toml"] }

[dependencies]
tauri = { version = "=2.0.0-rc.10", features = ["config-toml", "test"] }
specta = { version = "=2.0.0-rc.20" }
specta-typescript = "0.0.7"
tauri-specta = { version = "=2.0.0-rc.19", features = ["derive", "typescript"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
macros = { path = "macros" }
tantivy = "0.22"
unicode-normalization = "0.1.20"
cjk = "0.2"
diacritics = "0.2"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-native-tls"] }
uuidv7 = "0.1.4"
uuid = "1.10.0"
chrono = { version = "0.4.38", features = ["serde"] }
serde_sqlite_jsonb = "0.1.0"
base64 = "0.22.1"
derive_more = { version = "1.0.0", features = ["deref"] }
polodb_core = "5.1.1"
