[package]
name = "potrin"
version = "0.0.0"
description = "A Tauri App"
authors = ["Joichiro Hayashi"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "potrin_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = ["config-toml"] }

[dependencies]
macros = { path = "macros" }

tauri = { version = "2.0", features = [
  "macos-private-api",
  "config-toml",
  "test",
] }
specta = { version = "2.0.0-rc.22", features = ["chrono"] }
specta-typescript = "0.0.9"
tauri-specta = { version = "2.0.0-rc.21", features = ["derive", "typescript"] }
tauri-plugin-window-state = "2.0.0"
garde = { version = "0.22.0", features = ["derive"] }
[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = "2.2.0"

tantivy = "0.22"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-native-tls"] }
yrs = "0.21.2"
json-patch = "3.0.1"

eyre = "0.6"
thiserror = "2.0.11"
itertools = "0.13.0"
derive_more = { version = "1.0.0", features = ["deref"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde_sqlite_jsonb = "0.1.0"
unicode-normalization = "0.1.20"
cjk = "0.2"
diacritics = "0.2"
uuid = { version = "1.10.0", features = ["v7"] }
chrono = { version = "0.4.38", features = ["serde"] }
base64 = "0.22.1"
hex = "0.4.3"
